# chip8-emulator

./: CMakeLists.txt  LICENSE  Makefile  README.md
include/: context.h  defs.h  executor.h  framebuffer.h  keystate.h  timerunit.h
src/: context.c  entry.c  executor.c  framebuffer.c  keystate.c  timerunit.c
tests/: sdl_test.c
